<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="olavbg.com.mymoovs_beta.MainActivity" >
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom"
        android:title="@string/search_item"/>

    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/log_out"
        android:title="@string/log_out"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
